--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "author": "Auth0",
-  "name": "@auth0/auth0-spa-js",
+  "author": "NHI",
+  "name": "@nhi/auth0-spa-js",
   "description": "Auth0 SDK for Single Page Applications using Authorization Code Grant Flow with PKCE",
   "license": "MIT",
   "version": "1.16.1",
